--- a/client/src/App.css
+++ b/client/src/App.css
@@ -332,7 +332,7 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url("./img/MERN.jpg") no-repeat center center/cover;
+  background: url("./img/new.jpg") no-repeat center center/cover;
   height: 100vh;
 }
 
